--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -16,6 +16,7 @@
         <ul>
             <li><a href="/publishers">Publishers</a></li>
             <li><a href="/authors">Authors</a></li>
+            <li><a href="/books">Books</a></li>
         </ul>
     </div>
 
