--- a/src/main/resources/templates/books/form.html
+++ b/src/main/resources/templates/books/form.html
@@ -36,6 +36,16 @@
                 </select>
             </div>
             <div class="form-group">
+                <label>Authors</label>
+                <div th:each="curAuthor, stat : *{authors}" style="margin-bottom: 0.5rem;">
+                    <select class="form-control" th:field="*{authors[__${stat.index}__]}">
+                        <option value="">---Choose an author---</option>
+                        <option th:each="author : ${authors}" th:value="${author.id}"
+                                th:text="${author.name}"></option>
+                    </select>
+                </div>
+            </div>
+            <div class="form-group">
                 <button type="submit" class="btn btn-primary">Submit</button>
                 <a class="btn btn-warning" th:href="@{/books}">Back to Books</a>
             </div>
