--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-<head>
+<head th:fragment="head">
     <title>Library Manager</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
@@ -20,13 +20,13 @@
         </ul>
     </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/webjars/org.webjars/jquery/3.2.1/jquery.min.js"
-            th:src="@{/webjars/jquery/3.2.1/jquery.min.js}"></script>
-    <script src="https://cdn.jsdelivr.net/webjars/org.webjars.npm/popper.js/1.12.5/dist/popper.min.js"
-            th:src="@{/webjars/popper.js/1.12.5/dist/popper.min.js}"></script>
-    <script src="https://cdn.jsdelivr.net/webjars/org.webjars/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
-            th:src="@{/webjars/bootstrap/4.0.0-beta.2/js/bootstrap.min.js}"></script>
+    <div th:fragment="scripts">
+        <script src="https://cdn.jsdelivr.net/webjars/org.webjars/jquery/3.2.1/jquery.min.js"
+                th:src="@{/webjars/jquery/3.2.1/jquery.min.js}"></script>
+        <script src="https://cdn.jsdelivr.net/webjars/org.webjars.npm/popper.js/1.12.5/dist/popper.min.js"
+                th:src="@{/webjars/popper.js/1.12.5/dist/popper.min.js}"></script>
+        <script src="https://cdn.jsdelivr.net/webjars/org.webjars/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
+                th:src="@{/webjars/bootstrap/4.0.0-beta.2/js/bootstrap.min.js}"></script>
+    </div>
 </body>
 </html>
