Change templates to show validation errors

--- a/src/main/resources/templates/books/form.html
+++ b/src/main/resources/templates/books/form.html
@@ -5,18 +5,30 @@
     <div class="container">
         <h1>Add/Edit Book</h1>
         <form class="form" th:object="${book}" th:action="@{/books}" method="POST">
+            <p th:if="${#fields.hasErrors('global')}" th:errors="*{global}"
+               th:class="text-danger">Incorrect data</p>
             <input type="hidden" th:field="*{id}"/>
             <div class="form-group">
                 <label for="title">Title</label>
-                <input id="title" type="text" class="form-control" th:field="*{title}"/>
+                <input id="title" type="text" class="form-control"
+                       th:classappend="${#fields.hasErrors('title')}? 'is-invalid'" th:field="*{title}"/>
+                <p th:if="${#fields.hasErrors('title')}" th:errors="*{title}"
+                   th:class="invalid-feedback">Incorrect data</p>
             </div>
             <div class="form-group">
                 <label for="isbn">ISBN</label>
-                <input id="isbn" type="text" class="form-control" th:field="*{isbn}"/>
+                <input id="isbn" type="text" class="form-control"
+                       th:classappend="${#fields.hasErrors('isbn')}? 'is-invalid'" th:field="*{isbn}"/>
+                <p th:if="${#fields.hasErrors('isbn')}" th:errors="*{isbn}"
+                   th:class="invalid-feedback">Incorrect data</p>
             </div>
             <div class="form-group">
                 <label for="yearPublished">Year Published</label>
-                <input id="yearPublished" type="text" class="form-control" th:field="*{yearPublished}"/>
+                <input id="yearPublished" type="text" class="form-control"
+                       th:classappend="${#fields.hasErrors('yearPublished')}? 'is-invalid'"
+                       th:field="*{yearPublished}"/>
+                <p th:if="${#fields.hasErrors('yearPublished')}" th:errors="*{yearPublished}"
+                   th:class="invalid-feedback">Incorrect data</p>
             </div>
             <div class="form-group">
                 <label for="publisher">Publisher</label>
@@ -28,8 +40,15 @@
             </div>
             <div class="form-group">
                 <label>Authors</label>
-                <div th:each="curAuthor, stat : *{authors}" style="margin-bottom: 0.5rem;">
+                <div th:each="curAuthor, stat : ${book.authors}" style="margin-bottom: 0.5rem;">
                     <select class="form-control" th:field="*{authors[__${stat.index}__]}">
+                        <option value="">---Choose an author---</option>
+                        <option th:each="author : ${authors}" th:value="${author.id}"
+                                th:text="${author.name}"></option>
+                    </select>
+                </div>
+                <div style="margin-bottom: 0.5rem;">
+                    <select class="form-control" th:name="|authors[${#lists.size(book.authors)}]|">
                         <option value="">---Choose an author---</option>
                         <option th:each="author : ${authors}" th:value="${author.id}"
                                 th:text="${author.name}"></option>
