--- a/src/main/resources/templates/authors/form.html
+++ b/src/main/resources/templates/authors/form.html
@@ -4,12 +4,19 @@
 <body>
     <div class="container">
         <h1>Add/Edit Author</h1>
+
         <form class="form" th:object="${author}" th:action="@{/authors}" method="POST">
+            <p th:if="${#fields.hasErrors('global')}" th:errors="*{global}"
+               th:class="text-danger">Incorrect data</p>
             <input type="hidden" th:field="*{id}"/>
             <div class="form-group">
                 <label for="name">Name</label>
-                <input id="name" type="text" class="form-control" th:field="*{name}"/>
+                <input id="name" type="text" class="form-control"
+                       th:classappend="${#fields.hasErrors('name')}? 'is-invalid'" th:field="*{name}"/>
+                <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}"
+                   th:class="invalid-feedback">Incorrect data</p>
             </div>
+
             <div class="form-group">
                 <button type="submit" class="btn btn-primary">Submit</button>
                 <a class="btn btn-warning" th:href="@{/authors}">Back to Authors</a>
