--- a/src/main/resources/templates/publishers/form.html
+++ b/src/main/resources/templates/publishers/form.html
@@ -5,10 +5,15 @@
     <div class="container">
         <h1>Add/Edit Publisher</h1>
         <form class="form" th:object="${publisher}" th:action="@{/publishers}" method="POST">
+            <p th:if="${#fields.hasErrors('global')}" th:errors="*{global}"
+               th:class="text-danger">Incorrect data</p>
             <input type="hidden" th:field="*{id}"/>
             <div class="form-group">
                 <label for="name">Name</label>
-                <input id="name" type="text" class="form-control" th:field="*{name}"/>
+                <input id="name" type="text" class="form-control"
+                       th:classappend="${#fields.hasErrors('name')}? 'is-invalid'" th:field="*{name}"/>
+                <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}"
+                   th:class="invalid-feedback">Incorrect data</p>
             </div>
             <div class="form-group">
                 <button type="submit" class="btn btn-primary">Submit</button>
