--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/webjars/org.webjars/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
           th:href="@{/webjars/bootstrap/4.0.0-beta.2/css/bootstrap.min.css}"/>
+    <link rel="stylesheet"
+          href="../static/css/style.css"
+          th:href="@{/css/style.css}"/>
 </head>
 <body>
     <div class="container">
